@@ -1,5 +1,6 @@
 * V1.12.3.1
   * Fixed ElasticSearch indexing error when index is empty
+  * Fixed remote repo access
 
 * V1.12.3
   * improved tests on Linux, MacOS and Windows
